# achronyme-editor

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
ach-lsp/: Cargo.toml
ach-lsp-core/: Cargo.toml
ach-lsp-core/src/: completion.rs  definitions.rs  diagnostics.rs  diagnostics_circom.rs  document.rs  hover.rs  lib.rs  symbols.rs  types.rs
ach-lsp/src/: backend.rs  completion.rs  convert.rs  definitions.rs  document.rs  hover.rs  main.rs  symbols.rs
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  esbuild.mjs  language-configuration-circom.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: download.ts  extension.ts
editors/vscode/syntaxes/: achronyme.tmLanguage.json  circom.tmLanguage.json
