[package]
name = "ach-lsp-core"
version = "0.2.0-beta.22"
edition = "2021"
license = "Apache-2.0"
description = "Core LSP logic for Achronyme: diagnostics, completions, hover, definitions, symbols. No tower-lsp dependency — compiles to WASM."

[features]
default = ["circom"]
# Enable diagnostics for .circom files. Pulls the `circom` + `diagnostics`
# crates from the achronyme workspace. Disable for browser/WASM builds
# where the extra code size isn't worth it.
circom = ["dep:circom", "dep:diagnostics"]

[dependencies]
achronyme-parser = { git = "https://github.com/achronyme/achronyme.git", rev = "0ab27721a81283547b8c51172f72355a554bd2dc" }
circom = { git = "https://github.com/achronyme/achronyme.git", rev = "0ab27721a81283547b8c51172f72355a554bd2dc", optional = true }
diagnostics = { git = "https://github.com/achronyme/achronyme.git", rev = "0ab27721a81283547b8c51172f72355a554bd2dc", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
