[package]
name = "ach-lsp"
version = "0.2.0-beta.17"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "ach-lsp"
path = "src/main.rs"

[dependencies]
achronyme-parser = { git = "https://github.com/achronyme/achronyme.git", branch = "main" }
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
